2008-10-22  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-documentation): add documentation
	strings of eclasses.  Still needs some work as comment-face will
	always override it
	(ebuild-mode-keywords-bzr): add bzr.eclass functions, though not
	officially in the tree, it will get there soon

2008-10-21  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-mercurial): add mercurial_fetch()
	(ebuild-mode-keywords-git): add git_fetch() and git_bootstrap
	(ebuild-mode-keywords-subversion): rename subversion_svn_fetch()
	to subversion_fetch() (eclass has changed)
	(ebuild-mode-keywords-distutils): add distutils_src_unpack() as it
	is used sometimes
	(ebuild-mode-keywords-python): add python_get_{lib,site}dir
	(ebuild-mode-keywords-functions-eapi2): Add functions introduced
	with EAPI=2
	(ebuild-mode-keywords-functions-default): Add default functions
	introduced with EAPI=2

2008-10-19  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-make-keywords-list): Revert change
	of 2008-09-26, not compatible with XEmacs and Emacs <=21

2008-10-19  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode, eselect-mode): Remove explicit
	"run-hooks", since major mode hooks are already implicitely called
	and would therefore run twice.
	(ebuild-mode-hook, eselect-mode-hook): Don't define.
	(font-lock): Require, needed for XEmacs.

2008-10-15  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-action-alist): New variable.
	(ebuild-mode-keyword): Use it.
	(ebuild-mode-menu): Add submenus for ebuild commands and for
	keyword manipulation.

2008-10-14  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (easymenu): Require.
	(ebuild-mode-menu): Add menu support for both Emacs and XEmacs.
	(ebuild-mode): Activate the menu.

2008-09-26  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-make-keywords-list): \< \> around