@@ -1,3 +1,8 @@
+2008-10-22  Ulrich Mueller  <ulm@gentoo.org>
+
+	* gentoo-syntax.el (ebuild-mode-menu): Remove pointless submenus
+	for keyword manipulation.
+
 2008-10-22  Christian Faulhammer  <opfer@gentoo.org>
 
 	* ebuild-mode-keywords.el
